--- a/index.html
+++ b/index.html
@@ -809,11 +809,11 @@
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/post/hugo/hugo/">hugo note</a>
+    <a href="/post/hugo/">hugo note</a>
   </div>
 
   
-  <a href="/post/hugo/hugo/" class="summary-link">
+  <a href="/post/hugo/" class="summary-link">
     <div class="article-style">
       <p>静态blog</p>
     </div>
